# LMS-with-yew

./: Cargo.toml  Trunk.toml  index.html  n.txt
backend/: env.example  package-lock.json  package.json
backend/src/: server.js
backend/src/controllers/: auth.controller.js  user.controller.js
backend/src/middlewares/: auth.middleware.js
backend/src/prisma/: schema.prisma
backend/src/prisma/migrations/20251003102458_init/: migration.sql
backend/src/prisma/migrations/20251003114015_init2/: migration.sql
backend/src/prisma/migrations/20251003153201_init_3/: migration.sql
backend/src/prisma/migrations/20251003164052_init_4/: migration.sql
backend/src/prisma/migrations/20251005114836_init/: migration.sql
backend/src/routes/: auth.route.js  user.route.js
backend/src/utils/: envProvider.js
src/: main.rs  routes.rs  types.rs
src/components/: add_course.rs  course_details.rs  home.rs  login.rs  mod.rs  register.rs  test.rs  user_courses.rs  video.rs
